--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
     "grunt": "^0.4.5",
     "grunt-contrib-less": "^0.12.0",
     "grunt-autoprefixer": "^2.0.0",
-    "grunt-contrib-jade": "^0.13.0"
-  },
-  "dependencies": {
-    "marked": "^0.3.3"
+    "grunt-contrib-jade": "^0.13.0",
+    "less": "~1.5.0",
+    "markdown": "*"
   }
 }
