--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "grunt-contrib-jade": "^0.13.0",
     "less": "~1.5.0",
     "markdown": "*"
+  },
+  "dependencies": {
+    "shuffle-array": "^0.1.0"
   }
 }
