--- a/src/package.json
+++ b/src/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.1",
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-contrib-less": "^0.12.0",
     "grunt-autoprefixer": "^2.0.0",
+    "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-jade": "^0.13.0",
+    "grunt-contrib-less": "^0.12.0",
     "less": "~1.5.0",
     "markdown": "*"
   },
