--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "progres-transaction": "0.0.0",
     "serve-favicon": "~2.2.0",
     "sql": "^0.52.0",
+    "underscore": "^1.8.3",
     "uuid": "^2.0.1"
   }
 }
