--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "basic-auth-connect": "^1.0.0",
     "body-parser": "~1.10.1",
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
